--- a/detail1.html
+++ b/detail1.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/icons8-code-100.png" type="image/png" />
     <title>DevBlog - Prinsip Desain Web Modern</title>
 
     <!-- Bootstrap CSS -->
